# genetic-nn-trainer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc
controller/: CMakeLists.txt  controller.cpp
data/: data.md  test_labels.data
data/mnist/: train_labels.data
data/models/: 16x16_cls01234_batch128_acc93.data  16x16_cls012_batch18000_acc93.data  16x16_cls012_batch600_acc97.data  cls012_batch256_acc94.data  models.md
examples/: main.cpp
gnnt/: CMakeLists.txt  gnnt.hpp
gnnt/gnnt/mlp/: activations.hpp  allocators.hpp  layers.hpp  network.hpp  serialization.hpp
gnnt/gnnt/mnist/: dataset.hpp  image.hpp  serializer.hpp
gnnt/gnnt/training/: chromosome.hpp  metrics.hpp  trainer.hpp  trainer_config.hpp
gnnt/gnnt/utility/: concepts.hpp  meta.hpp  pair.hpp  pipeline.hpp  random.hpp  random_generator.hpp  tuple_helpers.hpp
gnnt/testing/: tests.cpp
gui/controller/: controller.hpp
gui/model/: config.hpp  model.cpp
gui/view/: CMakeLists.txt  Stats.qml  VButton.qml
include/: CMakeLists.txt  gnnt.hpp  nn.hpp
include/gnnt/mlp/: activations.hpp  allocators.hpp  network.hpp
include/gnnt/mnist/: dataset.hpp  serializer.hpp
include/gnnt/training/: chromosome.hpp  trainer.hpp
include/gnnt/utility/: concepts.hpp  meta.hpp  pipeline.hpp
model/: CMakeLists.txt  model.cpp  model.h
test/: CMakeLists.txt  dataset_tests.cpp  mlp_tests.cpp  tests.cpp
ui/controller/: CMakeLists.txt  controller.cpp  controller.h  controller.hpp
ui/model/: CMakeLists.txt  config.hpp  model.cpp  model.h  model.hpp
ui/view/: Brushes.qml  Buttons.qml  CMakeLists.txt  Stats.qml  VCanvas.qml  VRadioButton.qml  main.qml
view/: Buttons.qml  Predictions.qml  Stats.qml  main.qml
